<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    tools:context=".RecordProcess">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/msx_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotation="180"
            android:contentDescription="image with IR and visual data mixed" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/feetmack" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/battery"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:gravity="end"
                android:text="95%"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <Chronometer
                android:id="@+id/itimer"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:format="%s"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.016" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton4"
                android:layout_width="59dp"
                android:layout_height="61dp"
                android:layout_gravity="center|bottom"
                android:layout_margin="16dp"
                android:clickable="true"
                app:backgroundTint="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.974" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floatingActionButtonvalidationBoth"
                android:layout_width="130dp"
                android:layout_height="61dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal|top"
                android:layout_margin="16dp"
                android:backgroundTint="@color/dark"
                android:clickable="true"
                android:text="@string/FullValidation"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:theme="@style/MyMaterialTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.974" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floatingActionButtonvalidationLeft"
                android:layout_width="130dp"
                android:layout_height="61dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal|top"
                android:layout_margin="16dp"
                android:backgroundTint="@color/dark"
                android:clickable="true"
                android:text="@string/LeftSide"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:theme="@style/MyMaterialTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.974" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floatingActionButtonvalidationRight"
                android:layout_width="130dp"
                android:layout_height="61dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal|top"
                android:layout_margin="16dp"
                android:backgroundTint="@color/dark"
                android:clickable="true"
                android:text="@string/RightSide"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:theme="@style/MyMaterialTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.974" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floatingActionButtonvalidationNone"
                android:layout_width="130dp"
                android:layout_height="61dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal|top"
                android:layout_margin="16dp"
                android:backgroundTint="@color/dark"
                android:clickable="true"
                android:text="@string/Disable"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:theme="@style/MyMaterialTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.974" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floatingActionButtonvalidationTop"
                android:layout_width="130dp"
                android:layout_height="61dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal|top"
                android:layout_margin="16dp"
                android:backgroundTint="@color/dark"
                android:clickable="true"
                android:text="@string/ValidationOptions"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:theme="@style/MyMaterialTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.974" />

            <Button
                android:id="@+id/buttonGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark"
                android:onClick="goToGallery"
                android:text="@string/gallery"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.025" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</LinearLayout>